# FATE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ecosystem.config.cjs  next.config.ts  package-lock.json  package.json  pyproject.toml  启动FATE服务.bat
.claude/: launch.json
app/: __init__.py  config.py  data.py  globals.css  layout.tsx  main.py  page.tsx  routes.py  schemas.py  services.py  tag_library.py
components/: AiDigest.tsx  ChatAssistant.tsx  CheckoutButton.tsx  CheckoutSuccess.tsx  DeepLock.tsx  DuoPdfButton.tsx  DuoReport.tsx  ElementFlames.tsx  FateReport.tsx  HistoryPanel.tsx  HistoryRecorder.tsx  InviteLanding.tsx  InviteShare.tsx  Landing.tsx  Luopan.tsx  PartnerForm.tsx  PdfButton.tsx  PillarLinks.tsx  PlotPanel.tsx  PrivacyCleanup.tsx  ShareButton.tsx  ShareCard.tsx
deploy/: mcp-setup.sh  mcp_server.py  nginx-fate.conf  server-setup.sh
docs/: DEPLOY_CN.md  REPORT_STANDARD.md  REQ_AI_DIGEST.md  REQ_DUO_REPORT.md  REQ_ENERGY_REPORT_V2.md  SERVER_DEPLOY_CN.md  V1_TO_V2.md  backend-architecture.md
fate_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lib/: agentReport.ts  assistant.ts  deepReport.ts  deepReportPdf.ts  deepseek.ts  digest.ts  digestStore.ts  duo.ts  duoGenerate.ts  duoPdf.ts  energy.ts  entitlementStore.ts  entitlements.ts  fate.ts  lunar-javascript.d.ts  reportPdf.ts  reportState.ts  stripeCheckout.ts  types.ts  unlock.ts
public/: _duo_preview.json
scripts/: mint-unlock-codes.mjs
tests/: commerce.test.ts  compliance.test.ts  digest.test.ts  duo.test.ts  energy.test.ts  fate.test.ts  (+2 more)
(+33 files in other folders)
