[project]
name = "fate-backend"
version = "0.1.0"
description = "Backend prototype for FATE, a Bazi-based social recommendation platform."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
